[package]
name = "devtools"
version = "1.0.0"
edition = "2024"

[profile]
release = { lto = "fat" }

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
config-file = { version = "0.2.3", features = ["yaml"] }
form_urlencoded = "1.2.2"
hex = "0.4.3"
md-5 = "0.11.0-rc.2"
rmcp = { version = "0.8.3", features = ["default", "transport-io"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.20", features = ["local-time"] }
ulid = "1.2.1"
