[package]
name = "devtools"
version = "1.0.0"
edition = "2024"
documentation = "https://eyeori.xyz/devtools/devtools"

[profile]
release = { lto = "fat" }

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
config-file = { version = "0.2.3", features = ["yaml"] }
form_urlencoded = "1.2.2"
hex = "0.4.3"
md-5 = "0.11.0-rc.5"
rmcp = { version = "1.2.0", features = ["default", "transport-io"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["local-time"] }
